<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_done"
        android:title="@string/menu_done_title"
        android:icon="@drawable/ic_done"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_add_image"
        android:title="@string/menu_add_image_title"
        android:icon="@drawable/ic_image"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_send"
        android:title="@string/menu_send_title"
        android:icon="@drawable/ic_send"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_delete_title"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_color"
        android:title="@string/menu_color_title"
        android:icon="@drawable/ic_color"
        app:showAsAction="never"/>

</menu>